<resources>
    <string name="app_name">lebashow</string>
    <string name="musicDetail_title">MusicDetailActivity</string>

    <string name="menuDrawer_login">点击登录</string>
    <string name="menuDrawer_personal">我的</string>
    <string name="menuDrawer_other">其它</string>
    <string name="menuDrawer_switchTheme">切换主题</string>
    <string name="menuDrawer_setting">设置</string>
    <string name="menuDrawer_open">打开</string>
    <string name="menuDrawer_close">关闭</string>

    <string name="mainFragment_handPick">精选</string>
    <string name="mainFragment_recommend">推荐</string>
    <string name="mainFragment_ranking">排行</string>
    <string name="mainFragment_radio">电台</string>

    <string name="handPickFragment_singerTypes">歌手分类</string>

    <string name="recommendFragment_hotRecommend">热门推荐</string>

    <string name="radioFragment_hotRecommend">推荐电台</string>
    <string name="radioFragment_labelRadio">标签电台</string>

    <string name="rankingFragment_recommendBand">推荐榜单</string>
    <string name="rankingFragment_noRecommendBand">非推荐榜单</string>
    <string name="rankingFragment_labelBand">标签榜单</string>

    <string name="mainFragment_selectedTheme">selected_theme</string>
    <string name="mainFragment_changeTheme">更换主题</string>

    <string name="musicListDialog_musicList">歌单列表</string>
    <string name="musicListDialog_clearMusic">清空</string>

    <string name="login_accountHint">请输入注册用户名</string>
    <string name="login_pwdHint">请输入密码</string>
    <string name="login_nickNameHint">请输入昵称</string>
    <string name="login_phoneHint">请输入手机号</string>
    <string name="login_rememberPwd">记住密码</string>
    <string name="login_login">登录</string>

    <string name="register_register">注册</string>
    <string name="register_selectSex">选择性别</string>
    <string name="register_sexMan">男</string>
    <string name="register_sexWoman">女</string>

    <string name="toast_accountProhibitNull">账号不允许为空</string>
    <string name="toast_pwdProhibitNull">密码不允许为空</string>
    <string name="toast_nickNameProhibitNull">昵称不允许为空</string>
    <string name="toast_phoneProhibitNull">手机号码不允许为空</string>
</resources>
