<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:orientation="vertical">


    <LinearLayout android:id="@+id/ll_registerHead"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="vertical" android:gravity="center"
        android:paddingTop="15dip" android:paddingBottom="10dip"
        android:background="?attr/colorPrimary">

        <ImageView android:id="@+id/img_registerHead"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:src="@mipmap/ic_default_user"/>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout android:id="@+id/tpLayout_registerUser"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_marginLeft="15dip" android:layout_marginTop="15dip">

        <com.jxnu.zha.qinglibrary.widget.ClearEditText android:id="@+id/clearET_registerUser"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:hint="@string/login_accountHint" android:imeOptions="actionNext"
            android:inputType="textEmailAddress" android:singleLine="true"
            android:textSize="16sp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout android:id="@+id/tpLayout_registerPwd"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_marginLeft="15dip">

        <com.jxnu.zha.qinglibrary.widget.ClearEditText android:id="@+id/clearET_registerPwd"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:hint="@string/login_pwdHint" android:imeOptions="actionNext"
            android:inputType="textEmailAddress" android:singleLine="true"
            android:textSize="16sp"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="vertical" android:paddingLeft="15dip">
        <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/register_selectSex"/>
        <RadioGroup android:id="@+id/rg_userSex"
            android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:orientation="horizontal" android:layout_marginTop="6dip">
            <RadioButton android:id="@+id/rbSexMan"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/register_sexMan" android:checked="true"/>
            <RadioButton android:id="@+id/rbSexWoman"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/register_sexWoman" />
        </RadioGroup>

    </LinearLayout>

    <Button android:id="@+id/btn_registerRegister" style="@style/full_cus_btn"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_marginLeft="15dip" android:layout_marginRight="15dip"
        android:text="@string/register_register" android:layout_marginTop="5dip"/>

</LinearLayout>
