<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:orientation="horizontal" android:gravity="center_vertical"
                android:padding="6dip" android:background="@color/color_commGrayE0">
                <ImageView
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:src="@mipmap/ic_ranking_recommend"/>
                <TextView
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip" android:textSize="@dimen/comm_size16"
                    android:text="@string/rankingFragment_recommendBand"/>
            </LinearLayout>
            <ListView android:id="@+id/lst_bandList1"
                android:layout_width="match_parent" android:layout_height="wrap_content"></ListView>
            <LinearLayout
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:orientation="horizontal" android:gravity="center_vertical"
                android:padding="6dip" android:background="@color/color_commGrayE0">
                <ImageView
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:src="@mipmap/ic_ranking_no_recommend"/>
                <TextView
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip" android:textSize="@dimen/comm_size16"
                    android:text="@string/rankingFragment_noRecommendBand"/>
            </LinearLayout>
            <ListView android:id="@+id/lst_bandList2"
                android:layout_width="match_parent" android:layout_height="wrap_content"></ListView>
            <LinearLayout
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:orientation="horizontal" android:gravity="center_vertical"
                android:padding="6dip" android:background="@color/color_commGrayE0">
                <ImageView
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:src="@mipmap/ic_ranking_label"/>
                <TextView
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip" android:textSize="@dimen/comm_size16"
                    android:text="@string/rankingFragment_labelBand"/>
            </LinearLayout>
            <ListView android:id="@+id/lst_bandList3"
                android:layout_width="match_parent" android:layout_height="wrap_content"></ListView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>